--- a/app/globals.css
+++ b/app/globals.css
@@ -177,6 +177,9 @@
   .btn-primary {
     @apply w-fit !bg-primary-200 !text-dark-100 hover:!bg-primary-200/80 !rounded-full !font-bold px-5 cursor-pointer min-h-10;
   }
+  .delete-btn {
+    @apply w-fit shrink-0 hover:!bg-destructive-200  !bg-primary-200/80 !rounded-full !font-bold cursor-pointer min-h-10;
+  }
   .btn-secondary {
     @apply w-fit !bg-dark-200 !text-primary-200 hover:!bg-dark-200/80 !rounded-full !font-bold px-5 cursor-pointer min-h-10;
   }
